[gd_scene load_steps=7 format=2]

[ext_resource path="res://school/Lessons/Lesson.tscn" type="PackedScene" id=1]
[ext_resource path="res://school/Lessons/Question.gd" type="Script" id=2]
[ext_resource path="res://school/Lessons/LessonFont.otf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Question" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="SwipeHandler" parent="." index="1"]
editor/display_folded = true

[node name="Next" type="Button" parent="." index="2"]
editor/display_folded = true
margin_left = 170.0
margin_top = 150.0
margin_right = 270.0
margin_bottom = 210.0

[node name="Panel" type="Panel" parent="Next" index="0"]
margin_right = 100.0
margin_bottom = 60.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Next" index="1"]
margin_right = 100.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "NEXT"
align = 1
valign = 1

[node name="Back" type="Button" parent="." index="3"]
editor/display_folded = true
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_left = 64.352
margin_top = 150.0
margin_right = 164.352
margin_bottom = 210.0

[node name="Panel" type="Panel" parent="Back" index="0"]
margin_right = 100.0
margin_bottom = 60.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Back" index="1"]
margin_right = 100.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "BACK"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

[node name="Result" type="Label" parent="CanvasLayer" index="0"]
margin_top = -200.0
margin_right = 299.0
margin_bottom = -93.0
rect_rotation = -30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
text = "PASSED"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="CanvasLayer/Result" index="0"]

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="SwipeHandler"]
